# pai-main

./: .gitignore  README.md  run_dev.py  zip_project.py
pai-backend/: alembic.ini  env.example  pyproject.toml  pytest.ini  requirements.txt
pai-backend/app/: database.py  main.py  models.py  schemas.py
pai-backend/app/agents/: __init__.py  admissions.py  admissions_agent.py  base.py  conversation.py  conversation_agent.py  matching.py  profile_agent.py  research.py  research_agent.py  retention_agents.py
pai-backend/app/api/: dependencies.py
pai-backend/app/core/: __init__.py  config.py  exceptions.py  lifespan.py  logging.py  security.py
pai-backend/app/infrastructure/: __init__.py  database.py  http.py  redis.py
pai-backend/app/integrations/: __init__.py
pai-backend/app/modules/: __init__.py
pai-backend/app/orchestrator/: kernel.py
pai-backend/app/prompts/: __init__.py  registry.py
pai-backend/app/routers/: auth.py  chat.py  documents.py  profile.py  roadmap.py  tracker.py
pai-backend/app/runtime/: __init__.py  agent_registry.py  context.py  context_builder.py  intent_router.py  orchestrator.py  pipeline_runner.py  response_stream.py
pai-backend/app/utils/: auth.py  cv_generator.py  openai_client.py
pai-backend/migrations/: env.py
pai-backend/migrations/versions/: 4289017ab88b_baseline_schema.py
pai-backend/scripts/: migrate_db.py  setup_postgres.py
pai-backend/tests/: conftest.py
pai-backend/tests/api/: test_storage.py
pai-backend/tests/modules/: test_conversations.py  test_engines.py  test_services.py
pai-frontend-main/: proxy.ts  (+3 more)
(+124 files in other folders)
